test_data/neg/ss/655287/Windows/655287.ss8_simp.rtf
>655287
MDYAIKPWWAARWETVEPEPEEPVYTDEETVYNEPTINDLIDMEMGHDYSR
LLLLLLLLEEEEEEELLLLLLLLLLLLLLLLLLLLLHHHHHHLLLLLLLLL
